--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -19,6 +19,7 @@
     <attr name="conversation_received_text_primary_color" format="reference|color"/>
     <attr name="conversation_received_text_secondary_color" format="reference|color"/>
 
+    <attr name="fab_color" format="reference|color" />
     <attr name="actionbar_icon" format="reference" />
     <attr name="lower_right_divet" format="reference" />
 
