--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -21,6 +21,9 @@
         <item name="background">@color/gray95</item>
         <item name="android:background">@color/gray95</item>
         <item name="logo">@drawable/actionbar_icon_holo_dark</item>
+        <item name="android:popupTheme">@style/ThemeOverlay.AppCompat.Dark</item>
+        <item name="popupTheme">@style/ThemeOverlay.AppCompat.Dark</item>
+
     </style>
 
     <style name="TextSecure.LightActionBar"
