--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -20,18 +20,19 @@
         <item name="colorPrimary">@color/textsecure_primary</item>
         <item name="colorPrimaryDark">@color/textsecure_primary_dark</item>
         <item name="colorAccent">@color/textsecure_primary</item>
-        <item name="android:windowContentOverlay">@drawable/compat_actionbar_shadow_background</item>
+        <!--<item name="android:windowContentOverlay">@drawable/compat_actionbar_shadow_background</item>-->
         <item name="conversation_list_item_background_read">@drawable/conversation_list_item_background_read_light</item>
         <item name="conversation_list_item_background_unread">@drawable/conversation_list_item_background_unread_light</item>
         <item name="conversation_list_item_background_selected">@drawable/list_selected_holo_light</item>
         <item name="conversation_list_item_count_color">#66333333</item>
-        <item name="conversation_list_item_contact_color">#FF444444</item>
+        <item name="conversation_list_item_contact_color">#FF333333</item>
         <item name="conversation_list_item_subject_color">#FF444444</item>
         <item name="conversation_list_item_date_color">#ff999999</item>
         <item name="conversation_list_item_divider">@drawable/conversation_list_divider_shape</item>
 
         <item name="share_list_item_divider">@drawable/share_list_divider_shape</item>
 
+        <item name="fab_color">@color/textsecure_primary</item>
         <item name="actionbar_icon">@drawable/actionbar_icon_holo_light</item>
         <item name="lower_right_divet">@drawable/divet_lower_right_dark</item>
 
@@ -156,6 +157,7 @@
         <item name="encrypted_backup">@drawable/encrypted_backup_dark</item>
         <item name="plaintext_backup">@drawable/plaintext_backup_dark</item>
 
+        <item name="fab_color">@color/textsecure_primary_dark</item>
         <item name="actionbar_icon">@drawable/actionbar_icon_holo_dark</item>
         <item name="lower_right_divet">@drawable/divet_lower_right_light</item>
 
@@ -171,23 +173,23 @@
         <item name="conversation_emoji_toggle">@drawable/ic_emoji_light</item>
         <item name="conversation_keyboard_toggle">@drawable/ic_ime_light</item>
 
-        <item name="menu_new_conversation_icon">@drawable/ic_action_new_holo_dark</item>
-        <item name="menu_group_icon">@drawable/ic_menu_groups_holo_dark</item>
-        <item name="menu_search_icon">@drawable/ic_menu_search_holo_dark</item>
-        <item name="menu_call_icon">@drawable/ic_menu_call_holo_dark</item>
-        <item name="menu_unlock_icon">@drawable/ic_menu_unlock_holo_dark</item>
-        <item name="menu_lock_icon">@drawable/ic_menu_lock_holo_dark</item>
+        <item name="menu_new_conversation_icon">@drawable/ic_add_white_24dp</item>
+        <item name="menu_group_icon">@drawable/ic_group_white_24dp</item>
+        <item name="menu_search_icon">@drawable/ic_search_white_24dp</item>
+        <item name="menu_call_icon">@drawable/ic_call_white_24dp</item>
+        <item name="menu_unlock_icon">@drawable/ic_unlocked_white_24dp</item>
+        <item name="menu_lock_icon">@drawable/ic_lock_white_24dp</item>
         <item name="menu_lock_icon_small">@drawable/ic_lock_white_18dp</item>
         <item name="menu_lock_icon_small_recv">@drawable/ic_lock_black_18dp</item>
-        <item name="menu_trash_icon">@drawable/ic_menu_trash_holo_dark</item>
-        <item name="menu_selectall_icon">@drawable/ic_menu_selectall_holo_dark</item>
-        <item name="menu_split_icon">@drawable/ic_menu_split_holo_dark</item>
-        <item name="menu_accept_icon">@drawable/ic_menu_accept_holo_dark</item>
-        <item name="menu_refresh_directory">@drawable/ic_menu_refresh_holo_dark</item>
-        <item name="menu_copy_icon">@drawable/ic_action_copy_holo_dark</item>
-        <item name="menu_info_icon">@drawable/ic_dialog_info_holo_dark</item>
-        <item name="menu_forward_icon">@drawable/ic_action_forward_holo_dark</item>
-        <item name="menu_save_icon">@drawable/ic_action_save_holo_dark</item>
+        <item name="menu_trash_icon">@drawable/ic_delete_white_24dp</item>
+        <item name="menu_selectall_icon">@drawable/ic_select_all_white_24dp</item>
+        <item name="menu_split_icon">@drawable/ic_call_split_white_24dp</item>
+        <item name="menu_accept_icon">@drawable/ic_check_white_24dp</item>
+        <item name="menu_refresh_directory">@drawable/ic_refresh_white_24dp</item>
+        <item name="menu_copy_icon">@drawable/ic_content_copy_white_24dp</item>
+        <item name="menu_info_icon">@drawable/ic_info_outline_white_24dp</item>
+        <item name="menu_forward_icon">@drawable/ic_forward_white_24dp</item>
+        <item name="menu_save_icon">@drawable/ic_save_white_24dp</item>
 
         <item name="reminder_header_background">@color/textsecure_primary_dark</item>
     </style>
